JL20: Fixed video on large sizes and make sure not to play loop video on mobile and tablet.

--- a/_/css/libtech.jamielynn.scss
+++ b/_/css/libtech.jamielynn.scss
@@ -329,30 +329,30 @@ body {
 			.video-wrapper {
 				display: none;
 			}
-			.film {
-				display: none;
-				position: fixed;
-				z-index: 100;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				@include vendorize(opacity, 0);
+		}
+	}
+	.film-container {
+		display: none;
+		position: fixed;
+		z-index: 100;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		@include vendorize(opacity, 0);
 
-				.arrow-left {
-					position: absolute;
-					top: 20px;
-					left: 20px;
+		.arrow-left {
+			position: absolute;
+			top: 20px;
+			left: 20px;
 
-					img {
-						margin-left: -33px;
-					}
-					&:hover,
-					&:focus {
-						img {
-							margin-left: 0px;
-						}
-					}
+			img {
+				margin-left: -33px;
+			}
+			&:hover,
+			&:focus {
+				img {
+					margin-left: 0px;
 				}
 			}
 		}
